--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,5 @@
 <head>
-  <title>CodeNinjas - Progress Reports</title>
+  <title>CodeNinjas - Timestamps</title>
   <script src="https://kit.fontawesome.com/e5cefe8111.js" crossorigin="anonymous"></script>
   
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js" crossorigin="anonymous"></script>
